--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -160,10 +160,10 @@
   <footer>
     <p>© 2016 - Erivelton</p>
   </footer>
-  <script src="{{ "/js/turbolinks.min.js" | prepend: site.baseurl }}"></script>
-  <script src="{{ "/js/jquery-2.1.4.min.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/js/turbolinks.min.js" | prepend: site.baseurl }}" data-turbolinks-eval=false></script>
+  <script src="{{ "/js/jquery-2.1.4.min.js" | prepend: site.baseurl }}" data-turbolinks-eval=false></script>
   <script src="{{ "/js/scripts.js" | prepend: site.baseurl }}"></script>
-  <script src="{{ "/js/remodal.min.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/js/remodal.min.js" | prepend: site.baseurl }}" data-turbolinks-eval=false></script>
   <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(["_setAccount", "UA-67059182-1"]);
