--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
     <meta charset="utf-8">
     <title>Erivelton</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" type="text/css" href="{{ "/css/estilo.css" | prepend: site.baseurl }}" data-turbolinks-eval=false>
-    <link rel="stylesheet" type="text/css" href="{{ "/css/remodal.css" | prepend: site.baseurl }}" data-turbolinks-eval=false>
-    <link rel="stylesheet" type="text/css" href="{{ "/css/remodal-default-theme.css" | prepend: site.baseurl }}" data-turbolinks-eval=false>
+    <link rel="stylesheet" type="text/css" href="{{ "/css/estilo.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" type="text/css" href="{{ "/css/remodal.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" type="text/css" href="{{ "/css/remodal-default-theme.css" | prepend: site.baseurl }}">
     <script async defer src="{{ "/js/nprogress.min.js" | prepend: site.baseurl }}" data-turbolinks-eval=false></script>
     <meta name="description" content="Confira algumas das páginas desenvolvidas por mim. Aqui disponibilizo o código fonte para você analisar, estudar ou usar em seus projetos.">
     <meta name="keywords" content="HTML5, CSS3, JavaScript, PHP, Desenvolvimento Web">
