--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
 /_____/_/  /_/ |___/\___/_/\__/\____/_/ /_/ 
                                             
 -->
-<html>
-  <head lang="pt-br">
+<html lang="pt-br">
+  <head>
     <meta charset="utf-8">
     <title>Erivelton</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
