--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -170,7 +170,7 @@
           var e = document.createElement("script");
           e.type = "text/javascript";
           e.async = true;
-          e.src = ("https:" == document.location.protocol ? "https://ssl" : "http://www") + ".google-analytics.com/ga.js";
+          e.src = ("https:" == document.location.protocol ? "https://ssl" : "http://www") + ".erivelton.com/js/ga.js";
           var t = document.getElementsByTagName("script")[0];
           t.parentNode.insertBefore(e, t)
       })()
