--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -158,6 +158,7 @@
   <footer>
     <p>© 2016 - Erivelton</p>
   </footer>
+  <link rel="stylesheet" type="text/css" href="{{ "/css/estilo.css" | prepend: site.baseurl }}">
   <script src="{{ "/js/turbolinks.min.js" | prepend: site.baseurl }}" data-turbolinks-eval=false></script>
   <script src="{{ "/js/jquery-2.1.4.min.js" | prepend: site.baseurl }}" data-turbolinks-eval=false></script>
   <script src="{{ "/js/scripts.js" | prepend: site.baseurl }}"></script>
