--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
     <title>Erivelton</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="{{ "/css/estilo.css" | prepend: site.baseurl }}">
-    <script src="{{ "/js/loadCSS.js" | prepend: site.baseurl }}" data-turbolinks-eval=false></script>
-    <script src="{{ "/js/cssrelpreload.js" | prepend: site.baseurl }}" data-turbolinks-eval=false></script>
+    <script async defer src="{{ "/js/loadCSS.js" | prepend: site.baseurl }}" data-turbolinks-eval=false></script>
+    <script async defer src="{{ "/js/cssrelpreload.js" | prepend: site.baseurl }}" data-turbolinks-eval=false></script>
     <link rel="preload" href="/css/estilo.css" as="style" onload="this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="/css/estilo.css"></noscript>
     <script async defer src="{{ "/js/nprogress.min.js" | prepend: site.baseurl }}" data-turbolinks-eval=false></script>
