--- a/css/estilo.css
+++ b/css/estilo.css
@@ -346,6 +346,7 @@ main #paginas .container h1 {
   margin-bottom: 30px;
   text-align: center;
 }
+/*
 main #paginas .container .caixas {
   -webkit-column-count: 4;
   -webkit-column-gap: 10px;
@@ -372,6 +373,22 @@ main #paginas .container .caixas .caixa {
   -moz-transition: all .2s ease;
   -o-transition: all .2s ease;
   transition: all .2s ease;
+}
+*/
+main #paginas .container .caixas{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: flex-start;
+}
+main #paginas .container .caixas .caixa{
+  flex: 0 0 220px;
+  border: 3px solid #d3d3d3;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
+  margin: 5px 5px 5px 5px;
+  opacity: 1;
+  top: 0;
 }
 main #paginas .container .caixas .caixa h2 {
   background: #000000;
@@ -423,6 +440,19 @@ main #paginas .container .caixas .caixa .botoes .baixar {
     transition: all 0.2s ease 0s;
 }
 main #paginas .container .caixas .caixa .botoes .baixar:hover {
+  background-color: #292c54;
+}
+main #paginas .container .caixas .caixa .botoes a {
+  color: #fff;
+    background-color: #383b75;
+    border-radius: 5px;
+    padding: 6px 40px 6px 40px;
+    text-decoration: none;
+    display: inline-block;
+    margin-top: 4px;
+    transition: all 0.2s ease 0s;
+}
+main #paginas .container .caixas .caixa .botoes a:hover {
   background-color: #292c54;
 }
 main #paginas .container .caixas .caixa .botoes .otimizacao {
@@ -655,6 +685,11 @@ footer p {
     font-size: 30px;
   }
 }
+@media screen and (max-width: 518px) {
+  main #paginas .container .caixas .caixa{
+    flex: 0 0 90%;
+  }
+}
 @media screen and (max-width: 480px) {
   main #paginas .container .caixas {
     -webkit-column-count: 1;
@@ -873,7 +908,7 @@ html.remodal-is-locked {
   box-sizing: border-box;
   width: 100%;
   margin-bottom: 10px;
-  padding: 35px;
+  padding: 15px;
 
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
