Atualizando algumas coisas

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -201,6 +201,7 @@ layout: compress
     }
   </script>
   <script type="text/javascript">
+  setTimeout(function(){ 
       var _gaq = _gaq || [];
       _gaq.push(["_setAccount", "UA-67059182-1"]);
       _gaq.push(["_trackPageview"]);
@@ -212,6 +213,7 @@ layout: compress
           var t = document.getElementsByTagName("script")[0];
           t.parentNode.insertBefore(e, t)
       })()
+  }, 300);
   </script>
   </body>
 </html>
