--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -177,11 +177,8 @@ layout: compress
   <footer>
     <p>© 2016 - Erivelton</p>
   </footer>
-  <script src="{{ "/js/turbolinks.min.js" | prepend: site.baseurl }}" data-turbolinks-eval=false></script>
-  <script src="{{ "/js/jquery-2.1.4.min.js" | prepend: site.baseurl }}" data-turbolinks-eval=false></script>
-  <script async defer src="{{ "/js/scripts.js" | prepend: site.baseurl }}"></script>
-  <script async defer src="{{ "/js/remodal.min.js" | prepend: site.baseurl }}"></script>
-  <script async defer src="{{ "/js/jquery-lang.js" | prepend: site.baseurl }}" charset="utf-8" type="text/javascript" data-turbolinks-eval=false></script>
+  <script src="{{ "/js/app.js" | prepend: site.baseurl }}" charset="utf-8" type="text/javascript" data-turbolinks-eval=false></script>
+  <script src="{{ "/js/app-reload.js" | prepend: site.baseurl }}"></script>
   <script>
     var lang = new Lang();
     lang.dynamic('en', '/js/langpack/en.json');
