--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,9 +74,9 @@ layout: compress
         <h1 lang="br" class="animated fadeInUp">Páginas</h1>
         <div class="caixas">
           <div class="caixa">
-            <h2>Erivelton | Play</h2>
+            <h2>Play</h2>
             <figure>
-              <img lang="br" src="{{ "/img/erivelton-play.jpg" | prepend: site.baseurl }}" alt="Página do Erivelton | Play"/>
+              <img lang="br" src="{{ "/img/play.jpg" | prepend: site.baseurl }}" alt="Página do Play"/>
             </figure>
             <p><strong lang="br">Descrição:</strong></p>
             <p lang="br">Uma página criada para organizar minhas músicas favoritas.</p>
