Atualizando algumas coisas

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@ layout: compress
     <meta name="keywords" content="HTML5, CSS3, JavaScript, PHP, Desenvolvimento Web">
     <meta name="author" content="Erivelton">
     <link href="{{ "/favicon.ico" | prepend: site.baseurl }}" rel="icon" type="image/ico">
-    <meta property="og:image" content="{{ "/img/desenvolvimento-web.jpg" | prepend: site.baseurl }}">
+    <!--<meta property="og:image" content="{{ "/img/desenvolvimento-web.jpg" | prepend: site.baseurl }}">-->
   </head>
   <body>
   <header>
