Atualizando algumas coisas

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -148,6 +148,7 @@ layout: compress
         <h1 lang="br" class="animated fadeInUp">Tecnologias / Plataformas / Frameworks que uso atualmente</h1>
         <p class="item">HTML5</p>
         <p class="item">CSS3</p>
+        <p class="item">Sass</p>
         <p class="item">Bootstrap</p>
         <p class="item">JavaScript</p>
         <p class="item">jQuery</p>
@@ -159,6 +160,7 @@ layout: compress
         <p class="item">WordPress</p>
         <p class="item">Blogger</p>
         <p class="item">Jekyll</p>
+        <p class="item">Git</p>
       </div>
     </section>
     <section id="contato">
