Atualizando algumas coisas

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -152,6 +152,7 @@ layout: compress
         <p class="item">Bootstrap</p>
         <p class="item">JavaScript</p>
         <p class="item">jQuery</p>
+        <p class="item">PWA</p>
         <p class="item">Vue.js</p>
         <p class="item">NW.js</p>
         <p class="item">PHP</p>
@@ -200,6 +201,7 @@ layout: compress
       window.lang.change('en');
     }
   </script>
+  <script src="{{ "/js/install.js" | prepend: site.baseurl }}"></script>
   <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(["_setAccount", "UA-67059182-1"]);
